# yohoho

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
docs/: DESIGN.md  edge-cases.md
packaging/npm/: README.md  package.json
packaging/npm/lib/: bootstrap.js
packaging/npm/test/: bootstrap.test.js  integration.md  version-lockstep.test.js
src/yohoho/: __main__.py
src/yohoho/core/: audio.py  cli.py  config.py  config_access.py  config_tui.py  controller.py  daemon.py  engine.py  events.py  history.py  null_platform.py  observability.py  platform_api.py  platform_factory.py  recorder.py  run_loop.py  sounds.py
src/yohoho/core/ui/: __init__.py  _dpi.py  _tcl_env.py  events.py  fonts.py  main_thread.py  panel.py  panel_model.py  runner.py  term.py  theme.py
src/yohoho/platform/: macos_window.py
src/yohoho/platform/_shared/: chords.py  hotkey_capture.py  pynput_hotkey.py
src/yohoho/platform/macos/: __init__.py  _appkit.py  autostart.py  chrome.py  clipboard.py  focus.py  hotkey.py  inject.py  input_source.py  permissions.py  process.py
src/yohoho/platform/windows/: __init__.py  autostart.py  chrome.py  clipboard.py  focus.py  hotkey.py  inject.py  permissions.py  process.py
tests/: helpers.py
tests/integration/: test_daemon_lifecycle.py  test_engine_real.py
tests/unit/: test_audio.py  test_cli.py  test_cli_config.py  test_config.py  test_config_access.py  test_config_tui.py  test_controller.py  test_controller_status.py  test_engine.py  test_history.py  test_observability.py  test_platform_api.py  test_platform_api_chrome.py  test_platform_factory.py  test_recorder.py  test_run_loop.py  test_smoke.py  test_sounds.py
tests/unit/core/: test_cli_daemon.py  test_config.py  test_daemon.py  test_process_controller.py  test_run_loop_format.py  test_runner_sigterm.py  test_term.py
tests/unit/platform/_shared/: test_chords.py  test_hotkey_capture.py  test_pynput_hotkey.py
tests/unit/ui/: test_dpi.py  test_fonts.py  test_macos_window.py  test_main_thread.py  test_no_macos_window_import.py  test_panel_model_audio.py  test_panel_model_states.py  test_panel_view.py  test_runner.py  test_tcl_env.py  test_theme.py  test_tk_available.py  test_ui_events.py
(+18 files in other folders)
