[project]
name = "yohoho"
version = "0.0.1"
description = "Free, fully-local voice dictation"
requires-python = ">=3.11,<3.12"
dependencies = [
  "onnx-asr[cpu,hub]>=0.6",
  "onnxruntime>=1.27",
  "sounddevice>=0.4.7",
  "soundfile>=0.12",
  "soxr>=0.5",
  "numpy>=1.26",
  "pyyaml>=6",
  "pyobjc-framework-Cocoa>=10 ; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz>=10 ; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices>=10 ; sys_platform == 'darwin'",
  "pynput>=1.7",
]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "by-k4n" }]
keywords = ["dictation", "speech-to-text", "voice", "transcription", "parakeet", "local", "privacy", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/by-k4n/yohoho"
Repository = "https://github.com/by-k4n/yohoho"
Issues = "https://github.com/by-k4n/yohoho/issues"

[project.scripts]
yohoho = "yohoho.core.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yohoho"]

[tool.hatch.build.targets.sdist]
# Lean source distribution: only the importable code + user-facing README/LICENSE/
# pyproject. Excludes docs/ (design + planning notes), CLAUDE.md, .claude/, tests/
# (incl. fixtures), packaging/, RELEASING.md — none belong in the installable package.
include = [
  "/src/yohoho",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
  "integration: loads the real model / touches real audio devices (slow)",
  "gui: real-Tk smoke tests; need a windowing server (skipped headless)",
]
addopts = "-m 'not integration and not gui'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
